--- a/EasyAppxInstall/EasyAppxInstall.csproj
+++ b/EasyAppxInstall/EasyAppxInstall.csproj
@@ -40,8 +40,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Windows">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\Windows.winmd</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\CertInstallHelper.cs" />
+    <Compile Include="Helpers\PackageInstallHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
