--- a/EasyAppxInstall/EasyAppxInstall.csproj
+++ b/EasyAppxInstall/EasyAppxInstall.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="Helpers\CertInstallHelper.cs" />
     <Compile Include="Helpers\PackageInstallHelper.cs" />
+    <Compile Include="Helpers\ProgressHelper.cs" />
+    <Compile Include="Helpers\UriHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
